order by timestamp fixes #6, added styling to index, fixed spacing of stages

--- a/paprika/static/less/flows.less
+++ b/paprika/static/less/flows.less
@@ -21,7 +21,8 @@
     margin-top: 10px;
   }
     #add_flow_dialog #stage_form_list .stage_form {
-      height: 35px;
+      height: 40px;
+      width: 100%;
     }
       #add_flow_dialog #stage_form_list .stage_form input {
         float: left;
